\name{NEWS}
\title{NEWS file for the gridSVG package}
\encoding{UTF-8}

\section{Changes in version 1.4-4}{
  \itemize{
    \item Fixed bug where \code{gpar(col=c(foo="red"))} would not work
    (the name \code{foo} is now stripped).  Reported by Simon Anders.
  }
}
\section{Changes in version 1.4-3}{
  \itemize{
    \item Non-SVG style attributes are now \emph{removed} (with a
    warning) and this is done \emph{before} checking attributes for
    length equal to 1.

    This was in response to a problem reported by Wolfgang Huber.

    \item Fix evaluation of arguments when using the 'gridsvg' device.
    These were not being evaluated before being passed to 'grid.export'.

    Also reported by Wolfgang Huber.
  }
}
\section{Changes in version 1.4-2}{
  \itemize{
    \item Fixed export of clip grob (reported by Matthew Plourde).
    
    \item Fixed support for primitiveUnits="bbox" in filterEffect().

    \item Fix memory initialisation problem in base64 C code.

    Reported in valgrind testing by Brian Ripley.
  }
}
\section{Changes in version 1.4-1}{
  \itemize{
    \item Fixed raster export so that original raster is never
    exported at a resolution LOWER than its native resolution.
    
    \item Added forceGrob() methods so that animations, garnishing,
    hyperlinks, etc are retained if a grob is forced.
    
    \item Fix for export of downViewport(path) when the depth of the
    resulting navigation is greater than depth(path).

    The visible manifestation of this bug was that <g> elements were
    generated with an incorrect (too long/wrong depth) 'id' attribute.
  }
}
\section{Changes in version 1.4-0}{
  \itemize{
    \item Bumped R version requirement to R >= 3.1.0 because this
    version of gridSVG depends on some new exports from 'grid'

    \item Removed all nasty peeks into grid namespace (hence
    dependence on R 3.1.0).

    \item Tweaks to tests/ to make it easier to do QC checks.
  }
}

\section{Changes in version 1.3-0}{
  \itemize{